@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,10 +16,10 @@ import static org.openhab.binding.ecobee.internal.EcobeeBindingConstants.*;
 
 import java.lang.reflect.Field;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 
@@ -49,7 +49,6 @@ import org.openhab.binding.ecobee.internal.dto.thermostat.WeatherDTO;
 import org.openhab.binding.ecobee.internal.dto.thermostat.WeatherForecastDTO;
 import org.openhab.binding.ecobee.internal.function.AbstractFunction;
 import org.openhab.binding.ecobee.internal.function.FunctionRequest;
-import org.openhab.binding.ecobee.internal.util.StringUtils;
 import org.openhab.core.i18n.TimeZoneProvider;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.OnOffType;
@@ -74,6 +73,7 @@ import org.openhab.core.thing.type.ChannelTypeUID;
 import org.openhab.core.types.Command;
 import org.openhab.core.types.RefreshType;
 import org.openhab.core.types.State;
+import org.openhab.core.util.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -86,6 +86,8 @@ import org.slf4j.LoggerFactory;
 public class EcobeeThermostatBridgeHandler extends BaseBridgeHandler {
 
     private final Logger logger = LoggerFactory.getLogger(EcobeeThermostatBridgeHandler.class);
+
+    private static final int MIN_VALID_ACTUAL_TEMPERATURE = 0;
 
     private TimeZoneProvider timeZoneProvider;
     private ChannelTypeRegistry channelTypeRegistry;
@@ -179,7 +181,8 @@ public class EcobeeThermostatBridgeHandler extends BaseBridgeHandler {
             for (Channel channel : thing.getChannelsOfGroup(group)) {
                 if (isLinked(channel.getUID())) {
                     try {
-                        Field field = selection.getClass().getField("include" + StringUtils.capitalizeWords(group));
+                        Field field = selection.getClass()
+                                .getField("include" + StringUtils.capitalizeByWhitespace(group));
                         logger.trace("ThermostatBridge: Thermostat thing '{}' including object '{}' in selection",
                                 thing.getUID(), field.getName());
                         field.set(selection, Boolean.TRUE);
@@ -237,9 +240,9 @@ public class EcobeeThermostatBridgeHandler extends BaseBridgeHandler {
     public boolean actionPerformFunction(AbstractFunction function) {
         logger.debug("ThermostatBridge: Perform function '{}' on thermostat {}", function.type, thermostatId);
         SelectionDTO selection = new SelectionDTO();
-        selection.setThermostats(Collections.singleton(thermostatId));
+        selection.setThermostats(Set.of(thermostatId));
         FunctionRequest request = new FunctionRequest(selection);
-        request.functions = Collections.singletonList(function);
+        request.functions = List.of(function);
         EcobeeAccountBridgeHandler handler = getBridgeHandler();
         if (handler != null) {
             return handler.performThermostatFunction(request);
@@ -249,7 +252,7 @@ public class EcobeeThermostatBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(EcobeeActions.class);
+        return List.of(EcobeeActions.class);
     }
 
     public void updateChannels(ThermostatDTO thermostat) {
@@ -329,15 +332,15 @@ public class EcobeeThermostatBridgeHandler extends BaseBridgeHandler {
                     success = true;
                 }
             } else if (Integer.class.isAssignableFrom(fieldClass)) {
-                if (command instanceof DecimalType) {
+                if (command instanceof DecimalType decimalCommand) {
                     logger.debug("Set field of type Integer to value of DecimalType");
-                    field.set(object, Integer.valueOf(((DecimalType) command).intValue()));
+                    field.set(object, Integer.valueOf(decimalCommand.intValue()));
                     success = true;
-                } else if (command instanceof QuantityType) {
-                    Unit<?> unit = ((QuantityType<?>) command).getUnit();
+                } else if (command instanceof QuantityType quantityCommand) {
+                    Unit<?> unit = quantityCommand.getUnit();
                     logger.debug("Set field of type Integer to value of QuantityType with unit {}", unit);
                     if (unit.equals(ImperialUnits.FAHRENHEIT) || unit.equals(SIUnits.CELSIUS)) {
-                        QuantityType<?> quantity = ((QuantityType<?>) command).toUnit(ImperialUnits.FAHRENHEIT);
+                        QuantityType<?> quantity = quantityCommand.toUnit(ImperialUnits.FAHRENHEIT);
                         if (quantity != null) {
                             field.set(object, quantity.intValue() * 10);
                             success = true;
@@ -395,7 +398,12 @@ public class EcobeeThermostatBridgeHandler extends BaseBridgeHandler {
                 EcobeeUtils.undefOrDate(runtime.lastStatusModified, timeZoneProvider));
         updateChannel(grp + CH_RUNTIME_DATE, EcobeeUtils.undefOrString(runtime.runtimeDate));
         updateChannel(grp + CH_RUNTIME_INTERVAL, EcobeeUtils.undefOrDecimal(runtime.runtimeInterval));
-        updateChannel(grp + CH_ACTUAL_TEMPERATURE, EcobeeUtils.undefOrTemperature(runtime.actualTemperature));
+        if (runtime.actualTemperature > MIN_VALID_ACTUAL_TEMPERATURE) {
+            updateChannel(grp + CH_ACTUAL_TEMPERATURE, EcobeeUtils.undefOrTemperature(runtime.actualTemperature));
+        } else {
+            logger.debug("Skipping update of actual temperature because temperature {} below min threshold of {}",
+                    runtime.actualTemperature, MIN_VALID_ACTUAL_TEMPERATURE);
+        }
         updateChannel(grp + CH_ACTUAL_HUMIDITY, EcobeeUtils.undefOrQuantity(runtime.actualHumidity, Units.PERCENT));
         updateChannel(grp + CH_RAW_TEMPERATURE, EcobeeUtils.undefOrTemperature(runtime.rawTemperature));
         updateChannel(grp + CH_SHOW_ICON_MODE, EcobeeUtils.undefOrDecimal(runtime.showIconMode));
@@ -801,7 +809,7 @@ public class EcobeeThermostatBridgeHandler extends BaseBridgeHandler {
 
     private void performThermostatUpdate(ThermostatDTO thermostat) {
         SelectionDTO selection = new SelectionDTO();
-        selection.setThermostats(Collections.singleton(thermostatId));
+        selection.setThermostats(Set.of(thermostatId));
         ThermostatUpdateRequestDTO request = new ThermostatUpdateRequestDTO(selection);
         request.thermostat = thermostat;
         EcobeeAccountBridgeHandler handler = getBridgeHandler();
