@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -20,7 +20,6 @@ import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -40,7 +39,7 @@ import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatDTO;
 import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatHumidityDTO;
 import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatRuntimeDTO;
 import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatTstatDTO;
-import org.openhab.binding.radiothermostat.internal.util.RadioThermostatScheduleJson;
+import org.openhab.binding.radiothermostat.internal.util.RadioThermostatSchedule;
 import org.openhab.core.library.types.DateTimeType;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.OnOffType;
@@ -84,6 +83,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     private final Gson gson;
     private final RadioThermostatConnector connector;
     private final RadioThermostatDTO rthermData = new RadioThermostatDTO();
+    private @Nullable RadioThermostatSchedule thermostatSchedule;
 
     private @Nullable ScheduledFuture<?> refreshJob;
     private @Nullable ScheduledFuture<?> logRefreshJob;
@@ -137,7 +137,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
 
         // The setpoint mode is controlled by the name of setpoint attribute sent to the thermostat.
         // Temporary mode uses setpoint names prefixed with "t_" while absolute mode uses "a_"
-        if (config.setpointMode.equals("absolute")) {
+        if ("absolute".equals(config.setpointMode)) {
             this.setpointCmdKeyPrefix = "a_";
         }
 
@@ -152,10 +152,10 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             updateThing(editThing().withChannels(channels).build());
         }
 
-        final RadioThermostatScheduleJson thermostatSchedule = new RadioThermostatScheduleJson(config);
+        final RadioThermostatSchedule localSchedule = thermostatSchedule = new RadioThermostatSchedule(config);
 
         try {
-            heatProgramJson = thermostatSchedule.getHeatProgramJson();
+            heatProgramJson = localSchedule.getHeatProgramJson();
         } catch (IllegalStateException e) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "@text/offline.configuration-error-heating-program");
@@ -163,7 +163,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         }
 
         try {
-            coolProgramJson = thermostatSchedule.getCoolProgramJson();
+            coolProgramJson = localSchedule.getCoolProgramJson();
         } catch (IllegalStateException e) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "@text/offline.configuration-error-cooling-program");
@@ -185,7 +185,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(RadioThermostatThingActions.class);
+        return List.of(RadioThermostatThingActions.class);
     }
 
     /**
@@ -288,6 +288,22 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         logger.debug("Disposing the RadioThermostat handler.");
         connector.removeEventListener(this);
 
+        // Disable Remote Temp and Message Area on shutdown
+        if (ThingStatus.ONLINE.equals(this.getThing().getStatus())) {
+            final boolean isRemoteTempLinked = isLinked(REMOTE_TEMP);
+            final boolean isMessageLinked = isLinked(MESSAGE);
+
+            scheduler.schedule(() -> {
+                if (isRemoteTempLinked) {
+                    connector.sendCommand("rem_mode", "0", REMOTE_TEMP_RESOURCE);
+                }
+
+                if (isMessageLinked) {
+                    connector.sendCommand("mode", "0", PMA_RESOURCE);
+                }
+            }, 0, TimeUnit.SECONDS);
+        }
+
         ScheduledFuture<?> refreshJob = this.refreshJob;
         if (refreshJob != null) {
             refreshJob.cancel(true);
@@ -344,6 +360,8 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                         updateChannel(SET_POINT, rthermData);
                         rthermData.getThermostatData().setHold(0);
                         updateChannel(HOLD, rthermData);
+                        updateChannel(NEXT_TEMP, rthermData);
+                        updateChannel(NEXT_TIME, rthermData);
                         rthermData.getThermostatData().setProgramMode(-1);
                         updateChannel(PROGRAM_MODE, rthermData);
 
@@ -368,6 +386,8 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                         rthermData.getThermostatData().setHold(0);
                         connector.sendCommand("hold", "0", DEFAULT_RESOURCE);
                     }
+                    updateChannel(NEXT_TEMP, rthermData);
+                    updateChannel(NEXT_TIME, rthermData);
                     break;
                 case SET_POINT:
                     String cmdKey;
@@ -389,7 +409,10 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                     if (cmdInt != -1) {
                         QuantityType<?> remoteTemp = ((QuantityType<Temperature>) command)
                                 .toUnit(ImperialUnits.FAHRENHEIT);
-                        connector.sendCommand("rem_temp", String.valueOf(remoteTemp.intValue()), REMOTE_TEMP_RESOURCE);
+                        if (remoteTemp != null) {
+                            connector.sendCommand("rem_temp", String.valueOf(remoteTemp.intValue()),
+                                    REMOTE_TEMP_RESOURCE);
+                        }
                     } else {
                         connector.sendCommand("rem_mode", "0", REMOTE_TEMP_RESOURCE);
                     }
@@ -462,7 +485,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         if (isLinked(channelId)) {
             Object value;
             try {
-                value = getValue(channelId, rthermData);
+                value = getValue(channelId, rthermData, thermostatSchedule);
             } catch (Exception e) {
                 logger.debug("Error setting {} value", channelId.toUpperCase());
                 return;
@@ -471,18 +494,18 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             State state = null;
             if (value == null) {
                 state = UnDefType.UNDEF;
-            } else if (value instanceof PointType) {
-                state = (PointType) value;
-            } else if (value instanceof ZonedDateTime) {
-                state = new DateTimeType((ZonedDateTime) value);
-            } else if (value instanceof QuantityType<?>) {
-                state = (QuantityType<?>) value;
-            } else if (value instanceof Number) {
-                state = new DecimalType((Number) value);
+            } else if (value instanceof PointType pointCommand) {
+                state = pointCommand;
+            } else if (value instanceof ZonedDateTime zonedDateTimeCommand) {
+                state = new DateTimeType(zonedDateTimeCommand);
+            } else if (value instanceof QuantityType<?> quantityCommand) {
+                state = quantityCommand;
+            } else if (value instanceof Number numberCommand) {
+                state = new DecimalType(numberCommand);
             } else if (value instanceof String) {
                 state = new StringType(value.toString());
-            } else if (value instanceof OnOffType) {
-                state = (OnOffType) value;
+            } else if (value instanceof OnOffType onOffCommand) {
+                state = onOffCommand;
             } else {
                 logger.warn("Update channel {}: Unsupported value type {}", channelId,
                         value.getClass().getSimpleName());
@@ -500,16 +523,16 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     /**
      * Update a given channelId from the thermostat data
      *
-     * @param the channel id to be updated
+     * @param channelId the channel id to be updated
      * @param data the RadioThermostat dto
      * @return the value to be set in the state
      */
-    public static @Nullable Object getValue(String channelId, RadioThermostatDTO data) {
+    public static @Nullable Object getValue(String channelId, RadioThermostatDTO data,
+            @Nullable RadioThermostatSchedule thermostatSchedule) {
         switch (channelId) {
             case TEMPERATURE:
                 if (data.getThermostatData().getTemperature() != null) {
-                    return new QuantityType<Temperature>(data.getThermostatData().getTemperature(),
-                            API_TEMPERATURE_UNIT);
+                    return new QuantityType<>(data.getThermostatData().getTemperature(), API_TEMPERATURE_UNIT);
                 } else {
                     return null;
                 }
@@ -527,7 +550,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                 return data.getThermostatData().getProgramMode();
             case SET_POINT:
                 if (data.getThermostatData().getSetpoint() != 0) {
-                    return new QuantityType<Temperature>(data.getThermostatData().getSetpoint(), API_TEMPERATURE_UNIT);
+                    return new QuantityType<>(data.getThermostatData().getSetpoint(), API_TEMPERATURE_UNIT);
                 } else {
                     return null;
                 }
@@ -562,6 +585,22 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             case YESTERDAY_COOL_RUNTIME:
                 return new QuantityType<>(data.getRuntime().getYesterday().getCoolTime().getRuntime(),
                         API_MINUTES_UNIT);
+            case NEXT_TEMP:
+                if (thermostatSchedule != null) {
+                    final Integer nextTemp = thermostatSchedule.getNextTemp(data.getThermostatData());
+                    if (nextTemp != null) {
+                        return new QuantityType<>(nextTemp, API_TEMPERATURE_UNIT);
+                    }
+                }
+                return null;
+            case NEXT_TIME:
+                if (thermostatSchedule != null) {
+                    final ZonedDateTime nextTime = thermostatSchedule.getNextTime(data.getThermostatData());
+                    if (nextTime != null) {
+                        return nextTime;
+                    }
+                }
+                return null;
         }
         return null;
     }
